# andi

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
andi/: __init__.py  andi.py  errors.py  typeutils.py  utils.py
tests/: py36.py  py37.py  py37_no_pep_563.py  py37_pep_563.py  test_andi.py  test_attrs_support.py  test_dataclasses_support.py  test_errors.py  test_inspect.py  test_plan.py  test_typeutils.py  types.py  types_pep563.py  utils.py
