[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "andi"
version = "0.8.0"
description = "Library for annotation-based dependency injection"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Mikhail Korobov", email = "kmike84@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/scrapinghub/andi"
Source = "https://github.com/scrapy/andi"
Tracker = "https://github.com/scrapy/andi/issues"

[tool.bumpversion]
commit = true
tag = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = 'CHANGES.rst'
search = "\\(unreleased\\)$"
replace = "({now:%Y-%m-%d})"
regex = true

[tool.coverage.run]
branch = true

[tool.hatch.build.targets.sdist]
include = [
    "/andi",
    "/tests",
    "/CHANGES.rst",
    "/pytest.ini",
    "/tox.ini"
]

[tool.mypy]
implicit_reexport = false
